fix contour cncf level
Signed-off-by: Kasper Borg Nissen <kasper.nissen@dash0.com>

--- a/data/registry/application-integration-go-contour.yml
+++ b/data/registry/application-integration-go-contour.yml
@@ -19,7 +19,6 @@ urls:
   website: https://projectcontour.io/
   repo: https://github.com/projectcontour/contour
   docs: https://projectcontour.io/docs/main/config/tracing/
-  blog: /blog/2026/observing-contour-with-otel/
 createdAt: '2026-02-11'
-cncfProjectLevel: graduated
+cncfProjectLevel: incubating
 isNative: true
