--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "check:links actually has the side-effect of 'fixing' the refcache; this is why test-and-fix uses _fix:most"
   ],
   "scripts": {
-    "__check:links": "make --keep-going check-links",
     "__check:format:nowrap": "npm run _check:format:any -- --prose-wrap preserve",
-    "_build": "npm run _hugo -- --logLevel info -e dev --buildDrafts --buildFuture --baseURL \"${DEPLOY_PRIME_URL:-http://localhost}\"",
     "__check:format": "./scripts/npx-helper.sh prettier --ignore-unknown",
+    "__check:links": "make --keep-going check-links",
+    "_build": "npm run _hugo -- --logLevel info -e dev --buildDrafts --buildFuture --baseURL \"${DEPLOY_PRIME_URL:-http://localhost}\"",
     "_check:format:any": "npm run __check:format -- --check --ignore-path ''",
     "_check:format:nowrap": "npm run __check:format:nowrap -- content/ja content/uk content/zh",
     "_check:format": "npm run __check:format -- --check .",
@@ -34,7 +34,7 @@
     "_list:check:*": "npm run --loglevel=warn | grep -Ee '^\\s*check:[^:]+$'",
     "_list:check:for-test-and-fix": "npm -s run _list:check:* | grep -Ev \"i18n|${CMD_SKIP:-noop}\"",
     "_list:cspell": "grep -Ee '^\\s*\"@?cspell' package.json | awk -F: '{print $1}'  | tr -d '\"'",
-    "_list:diff-never-empty": "echo README.md && npm run _list:diff",
+    "_list:diff-never-empty": "echo README.md && npm run _list:diff --",
     "_list:diff": "git diff --name-only --diff-filter=AMR",
     "_list:fix:*": "npm run --loglevel=warn | grep -Ee '^\\s*fix:[^:]+$' | grep -v 'fix:all'",
     "_list:fix:for-test-and-fix": "npm -s run _list:fix:* | grep -Ev \"i18n|refcache|submodule|${CMD_SKIP:-noop}\"",
@@ -75,7 +75,7 @@
     "fix:expired": "npm run -s check:expired -- -q | xargs -r -I {} sh -c 'echo \"Deleting expired file: {}\" && rm {}'",
     "fix:filenames": "npm run _rename-to-kebab-case",
     "fix:format:diff": "npm run _fix:format:diff -- $(npm -s run _list:diff-never-empty)",
-    "fix:format:staged": "npm run _fix:format:diff -- $(npm -s run _list:diff-never-empty -- --cached)",
+    "fix:format:staged": "npx prettier --write --ignore-unknown $(npm -s run _list:diff-never-empty -- --cached)",
     "fix:format": "npm run format; npm run _fix:trailing-spaces",
     "fix:htmltest-config": "scripts/htmltest-config.sh",
     "fix:i18n:status": "scripts/check-i18n.sh -D",
