Move repo-path processing from spec to base render-link hook

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -5,7 +5,7 @@ disableKinds: [taxonomy]
 theme: [docsy]
 disableAliases: true # We do redirects via Netlify's _redirects file
 enableGitInfo: true
-ignoreLogs: [spec-resource-not-found]
+ignoreLogs: []
 
 # Language settings
 defaultContentLanguage: en
