--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -3,6 +3,7 @@ customRules:
   - ./scripts/_md-rules/unindent-code-blocks.js
   - ./scripts/_md-rules/trim-code-blank-lines.js
   - ./scripts/_md-rules/link-rules.mjs
+  - markdownlint-rule-no-shortcut-ref-link
 
 ignores:
   - '.github/**'
