--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "check:i18n": "scripts/check-i18n.sh",
     "check:links:internal": "npm run _check:links:internal",
     "check:links": "npm run _check:links",
-    "check:markdown": "npx markdownlint-cli2 '**/*.md'",
+    "check:markdown": "npx markdownlint-cli2 '**/*.md' '!tmp/**/*.md'",
+    "check:markdown:specs": "npx markdownlint-cli2 'tmp/(otel|otlp|semconv)/**/*.md'",
     "check:registry": "npm run _check:registry -- ",
     "check:spelling": "npx cspell --no-progress -c .cspell.yml content data 'layouts/**/*.md'",
     "check:text": "npm run _check:text -- ",
@@ -104,6 +105,7 @@
     "prebuild": "npm run _prebuild",
     "precheck:links:internal": "npm run build && npm run fix:htmltest-config",
     "precheck:links": "npm run build && npm run fix:htmltest-config",
+    "precheck:markdown:specs": "mkdir -p tmp && cp .markdownlint-for-specs.yml tmp/.markdownlint.yml",
     "prefix:submodule": "npm run update:submodule",
     "prepare": "npm run seq -- get:submodule _prepare:docsy",
     "preserve:hugo": "npm run _prebuild",
